infrastructure/k8s/overlays/eks/delete-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: scalestyle
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: scalestyle
$patch: delete
