infrastructure/k8s/overlays/eks/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalestyle-ingress
  namespace: scalestyle
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalestyle-dashboard-ingress
  namespace: scalestyle
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalestyle-jaeger-ingress
  namespace: scalestyle
$patch: delete
